--- a/wdn/templates_5.0/scss/components/_components.navigation.scss
+++ b/wdn/templates_5.0/scss/components/_components.navigation.scss
@@ -250,7 +250,7 @@
     top: 100%;
     transition: opacity 500ms ease-out;
     width: 100%;
-    z-index: 998;
+    z-index: 997;
 
 //     @supports (filter: blur(5px)) {
 //   	  background-image: linear-gradient(to bottom, $cream, fade-out($cream,.05));
